src/templates/BlogPostTemplate.scss
@import "../utils/variables";
@import "../utils/mixins";

.blog-post {
  width: 100%;
  display: flex;
  justify-content: center;
}
.blog-post-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #fff;
  color: $fontColour;

  width: 50%;

  @media (max-width: $brk-large) {
    width: 70%;
  }

  @media (max-width: $brk-medium) {
    width: 80%;
  }

  @media (max-width: $brk-small) {
    width: 90%;
  }
}

.blog-post-content {
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-weight: 300;

  width: 100%;

  p {
    width: 100%;
  }

  h1,
  h2,
  h3,
  h4,
  h5 {
    font-weight: 900;
    &::selection {
      color: $backgroundColour;
      background-color: $fontColour;
    }
  }

  p {
    font-size: $blogParagraphFontSizeLarge;
    line-height: 1.4;

    @media (max-width: $brk-small) {
      font-size: $blogParagraphFontSizeSmall;
    }

    &::selection {
      color: $backgroundColour;
      background-color: $fontColour;
    }
  }

  em {
    &::selection {
      color: $backgroundColour;
      background-color: $fontColour;
    }
  }

  img {
    max-width: 100%;
  }

  pre,
  code {
    overflow-x: auto;
  }

  .gatsby-highlight {
    overflow-x: auto;
    width: 100%;
  }

  a {
    color: $highlightColour;
    &::selection {
      color: $backgroundColour;
      background-color: $fontColour;
    }
  }

  ul,
  ol {
    li {
      font-size: $blogParagraphFontSizeLarge;
      margin-bottom: 15px;
    }
  }
}

.sub-page-title {
  font-family: $bodyFontFamily;
  font-size: $blogTitleFontSizeLarge;

  text-align: center;
  font-weight: 900;

  @media (max-width: $brk-small) {
    font-size: $blogTitleFontSizeSmall;
  }

  &::selection {
    color: $backgroundColour;
    background-color: $fontColour;
  }
}

